@@ -3,13 +3,14 @@ Release history for Dist-Zilla-Plugin-Prereqs-SyncVersions
 {{$NEXT}}
  - Bugfix: Avoid test failures under -Ddefault_inc_excludes_dot
  - Remove use of ConfigDumper util
+ - Remove use of Test::KENTNL/dztest in tests
 
  [Dependencies::Stats]
  - Dependencies changed since 0.003001, see misc/*.deps* for details
  - configure: (suggests: +1)
  - develop: +5 ↑4 -1 (suggests: ↑2)
  - runtime: -1
- - test: ↓1
+ - test: ↓1 -1
 
 0.003001 2015-02-04T09:48:39Z ae594be
  [Dependencies::Stats]
